--- a/custom/css/styles.scss
+++ b/custom/css/styles.scss
@@ -12,8 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #8257e5;
-
+  background-color: #5b3ca3;
 
   p {
     color: #fff;
@@ -54,7 +53,7 @@
   }
 
   .fa-trash-alt {
-    color: #ff0000;
+    color: #d60000;
   }
 
   @media (max-width: 768px) {
